--- a/gradle.properties
+++ b/gradle.properties
@@ -10,11 +10,12 @@ loader_version=0.16.14
 loom_version=1.10-SNAPSHOT
 
 # Mod Properties
-mod_version=Alpha-0.1.2
+mod_version=Alpha-0.1.4
 maven_group=org.mythic_goose_studios.life
 archives_base_name=life
 
 # Dependencies
 fabric_version=0.116.0+1.21.1
 cca_version=6.1.1
-
+cloth_version=15.0.140
+mod_menu_version=11.0.3
